# DEF-W9-33_TDE

./: .env.serve  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
.claude/: WAVE9_DATA_GUIDE.md
assets/: hero.html
configs/: debug.toml  evdet200k.toml  paper.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: evaluate.py  export.py  train.py  train_cu.py
src/anima_tde/: __init__.py  dataset.py  decode.py  evaluate.py  losses.py  model.py  neurons.py  serve.py  train.py  utils.py
src/anima_tde/backends/: __init__.py
src/anima_tde/backends/cuda/: __init__.py  nms_cuda.py  spiking_cuda.py
src/anima_tde/backends/cuda/kernels/: setup.py  spiking_ops.cu
src/anima_tde/backends/mlx/: __init__.py
tasks/: INDEX.md
tests/: conftest.py  test_cuda_ops.py  test_dataset.py  test_decode.py  test_model.py
